# OpenTargets-MCP

./: README.md  opentargets.py  pyproject.toml
src/opentargets_mcp/: __init__.py
